Use svh units to prevent toolbar covering content in mobile view

--- a/src/styles/components/_computer.scss
+++ b/src/styles/components/_computer.scss
@@ -1,6 +1,6 @@
 .computer {
   background-color: $light;
-  min-height: 100.1vh;
+  min-height: 100vh;
 }
 
 .computer__main {
