--- a/src/styles/components/_education.scss
+++ b/src/styles/components/_education.scss
@@ -1,6 +1,6 @@
 .education {
   background-color: $dark;
-  min-height: 100.1vh;
+  min-height: 100vh;
 }
 
 .education__main {
