--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -1,6 +1,6 @@
 .experience {
   background-color: $middle;
-  min-height: 100.1vh;
+  min-height: 100vh;
 
   h1 {
     width: 5em;
