--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -1,6 +1,5 @@
 .portfolio{
     background-color: $dark;
-    min-height: 100vh;
 }
 
 .portfolio__main{
